WB-78: added test environment and fixed confirmation creation when updating user